tests/cases/generics/ok/generic-angle-type-annotations.ari
enum Maybe[T] {
  None,
  Some(T),
}

struct Box[T] {
  value: T,
}

fn main() -> i64 {
  let nested: Box<Maybe<i64>> = Box<Maybe<i64>> { value: Some<i64>(5) };
  return match nested.value {
    Some(value) => value,
    None => 0,
  };
}
